--- a/BT-VL_vonglap02-bai3.html
+++ b/BT-VL_vonglap02-bai3.html
@@ -6,32 +6,32 @@
 </head>
 <body>
 <script>
-    for (let i = 1; i <= 5; i++) {
-        for (let j = 1; j <= i; j++) {
-            document.write('* ');
-        }
-        document.write('<br>');
-    }
-    document.write('<br>');
+    // for (let i = 1; i <= 5; i++) {
+    //     for (let j = 1; j <= i; j++) {
+    //         document.write('* ');
+    //     }
+    //     document.write('<br>');
+    // }
+    // document.write('<br>');
+    //
+    // for (let i = 5; i >= 1; i--) {
+    //     for (let j = 1; j <= i; j++) {
+    //         document.write('* ');
+    //     }
+    //     document.write('<br>');
+    // }
+    // document.write('<br>');
 
-    for (let i = 5; i >= 1; i--) {
-        for (let j = 1; j <= i; j++) {
-            document.write('* ');
-        }
-        document.write('<br>');
-    }
-    document.write('<br>');
-
-    for (let i = 1; i <= 5; i++) {
-        for (let j = 1; j < i; j++) {
-            document.write('&ensp;');
-        }
-        for (let j = 5; j >= i; j--) {
-            document.write('*');
-        }
-        document.write("<br>")
-    }
-    document.write('<br>');
+    // for (let i = 1; i <= 5; i++) {
+    //     for (let j = 1; j < i; j++) {
+    //         document.write('&ensp;');
+    //     }
+    //     for (let j = 5; j >= i; j--) {
+    //         document.write('*');
+    //     }
+    //     document.write("<br>")
+    // }
+    // document.write('<br>');
 
     for (let i = 0; i <= 5; i++) {
         for (let j = 4; j >= i; j--) {
